product gap fixed

--- a/app/styles/store.css
+++ b/app/styles/store.css
@@ -25,7 +25,7 @@
     width: 90vw;
     display: flex;
     flex-direction: column;
-    gap: 2.5vh;
+    gap: 1.5vh;
     clip-path: inset(0);
 }
 .productName {
@@ -39,18 +39,20 @@
 .productDescription {
     font-family: 'Helvetica Neue', sans-serif;
     font-size: 5vw;
+    padding-bottom: 5vh;
 }
 .productButton {
-
+    align-self: center;
 }
 .productButton button {
     font-family: 'Butler-Medium';
     color: black;
     background-color: transparent;
     border: 1px solid black;
-    padding: 1vh 10vw;
+    padding: 1vh 15vw;
     font-size: 5vw;
     cursor: pointer;
+    
 }
 
 @media screen and (min-width: 768px) {
@@ -83,7 +85,7 @@
         font-size: 1.25vw;
     }
     .productButton {
-    
+        align-self: flex-start;
     }
     .productButton button {
         font-size: 1.5vw;
